--- a/browser/js/common/directives/event-modification/event-modification.html
+++ b/browser/js/common/directives/event-modification/event-modification.html
@@ -8,7 +8,7 @@
       </div>
   </header>
   <div class="event-details-container">
-    <p> <strong>{{ evt.date }}</strong> | Start Time:  {{ evt.startTime.hours }}{{ evt.startTime.minutes }}</p>
+    <p> <strong>{{ evt.date }}</strong> | Timings: {{ displayStartTime.hours }}{{ displayStartTime.minutes }} - {{ displayEndTime.hours }}{{ displayEndTime.minutes}}</p>
     <p>{{ evt.location }}</p>
     <p ng-repeat="para in displayBlurb">{{ para }}</p>
   </div>
