--- a/browser/js/management/management.html
+++ b/browser/js/management/management.html
@@ -1,12 +1,16 @@
 <section id="management-panel" class="container">
-
-  <h2>Hi {{ currentUser.firstName }}, what do you need to do today?</h2>
-  <p ng-repeat="evt in allEvents">There are {{ evt.guests }} amount of people attending {{ evt.name }}<p>
+  <h2>Management Dashboard</h2>
+  <div class="flex-container-row">
+    <dashboard-event-panel ng-repeat="evt in allEvents" evt="evt"></dashboard-event-panel>
+  </div>
   <div class="flex-container-row">
     <button class="sqn-btn sqn-btn-flex" ui-sref-active="sqn-btn-active" ng-repeat="managementView in areasToManage" ui-sref="{{ managementView.state }}">{{ managementView.title }}</button>
   </div>
   <div class="row" ui-view>
     <!--  ui-view will render substates in here. Negates requirement for reloading the page. -->
+    <section class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+      <h1> Select a management option and it will load here.</h1>
+    </section>
   </div>
   <div>
     <p></p>
