--- a/browser/js/common/directives/event-modification/event-modification.html
+++ b/browser/js/common/directives/event-modification/event-modification.html
@@ -8,7 +8,7 @@
       </div>
   </header>
   <div class="event-details-container">
-    <p> <strong>{{ evt.date }}</strong> | Timings: {{ displayStartTime.hours }}{{ displayStartTime.minutes }} - {{ displayEndTime.hours }}{{ displayEndTime.minutes}}</p>
+    <p> <strong>{{ evt.date }}</strong> | <display-time modeltime="evt.startTime"></display-time> - <display-time modelTime="evt.endTime"></display-time></p>
     <p><strong>Venue:</strong> {{ evt.location }}</p>
     <p><strong>Details:</strong></p>
     <p ng-repeat="para in displayBlurb">{{ para }}</p>
