--- a/browser/js/common/directives/event-guest-limit/event-guest-limit.html
+++ b/browser/js/common/directives/event-guest-limit/event-guest-limit.html
@@ -2,7 +2,10 @@
   <div class="event-guest-limit-holder" ng-repeat="cat in cats">
     <label class="category-field">{{ cat.$value }}
     </label>
-    <input class="sqnInputNumber" type="number" placeholder="00" ng-model="limits[cat.$id]"></input>
+    <input class="sqnInputNumber-wide" type="number" placeholder="00" ng-model="limits[cat.$id]"></input>
   </div>
-  <input type="submit" class="sqn-btn-positive" value="Update"></input>
+  <div class="flex-container-row event-limit-options">
+    <input type="submit" class="sqn-btn-positive" value="Update"></input>
+    <button class="sqn-btn" ng-click="cancelEdit()">Cancel</button>
+  </div>
 </form>
