--- a/browser/js/common/directives/event-modification/event-modification.html
+++ b/browser/js/common/directives/event-modification/event-modification.html
@@ -4,7 +4,7 @@
       <div class="event-option-container">
         <button class="sqn-btn-danger" ng-click="removeEvent(evt)">Delete</button>
         <button class="sqn-btn" ng-click="toggleEditMode()" ng-disabled="editMode" ng-class="{'sqn-btn-disabled': editMode }">Edit</button>
-        <button class="sqn-btn" ng-click="toggleGuestLimits()">{{ guestLimits.buttonText }} Guest Limits</button>
+        <button class="sqn-btn" ng-click="toggleGuestLimits()" ng-class="{'sqn-btn-disabled': guestLimits.displayMenu}" ng-disabled="guestLimits.displayMenu">Add Guest Limits</button>
       </div>
   </header>
   <div class="event-details-container">
