Added  to event panel total value. Completed conditional styling of the event-dashboard-panel.

--- a/browser/js/common/directives/dashboard-event-panel/dashboard-event-panel.html
+++ b/browser/js/common/directives/dashboard-event-panel/dashboard-event-panel.html
@@ -8,8 +8,19 @@
       <span class="event-date" ng-bind="evt.date"></span>
       <display-time modelTime="evt.startTime"></display-time> - <display-time modelTime="evt.endTime"></display-time>
     </div>
-    <div class="flex-container-row">
-      <span ng-bind="guest"></span><span></span>
-    </div>
+    <table>
+      <thead>
+        <th>Reg</th>
+        <th ng-if="evt.guestLimits">Limit</th>
+        <th></th>
+      </thead>
+      <tbody>
+        <tr ng-repeat="cat in categories" ng-class="{'event-limit-reached': evt.guests[cat.$id] >= evt.guestLimits[cat.$id]}">
+          <td ng-bind="evt.guests[cat.$id]"></td>
+          <td ng-bind="evt.guestLimits[cat.$id]"></td>
+          <td class="event-category-name" ng-bind="cat.$value"></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
