Working on Platforms factory for attendees.

--- a/browser/js/common/directives/modify-guest-category/modify-guest-category.html
+++ b/browser/js/common/directives/modify-guest-category/modify-guest-category.html
@@ -3,4 +3,4 @@
 
 <button class="sqn-btn" ng-click="toggleEdit()"><span ng-show="!isEditing">Edit</span><span ng-show="isEditing">Cancel</span></button>
 <button ng-cloak ng-hide="!isEditing" class="sqn-btn-positive" ng-click="updateCatName()">Save</button>
-<button class="sqn-btn-danger" ng-show="isEditing">Remove</button>
+<button class="sqn-btn-danger" ng-show="isEditing" ng-click="removeCat()">Remove</button>
