Platforms added to database. Now adding directive to modify platforms and remove if required. After that, need to hook up attendee functionality with platforms.

--- a/browser/js/management/management-guestCategories.html
+++ b/browser/js/management/management-guestCategories.html
@@ -16,7 +16,7 @@
     <h3>Modify Platforms</h3>
   </header>
   <form ng-submit="addNewPlatform()">
-    <label>New Category Name: </label>
+    <label>New Platform Name: </label>
     <input class="sqnInput sqnInputActive" type="text" ng-model="platformLabel"></input>
     <input class="sqn-btn" type="submit" value="Add Platform"></button>
   </form>
