Completed adding, modifying and removing platform. Now to hook up attendee actions.

--- a/browser/js/common/directives/modify-guest-category/modify-guest-category.html
+++ b/browser/js/common/directives/modify-guest-category/modify-guest-category.html
@@ -1,4 +1,4 @@
-<input class="sqnInput" type="text" ng-model="modifiableCatObj.$value" ng-readonly="!isEditing" ng-class="{sqnInputActive: isEditing, sqnInputReadonly: !isEditing}">
+<input class="sqnInput mod-input-width" type="text" ng-model="modifiableCatObj.$value" ng-readonly="!isEditing" ng-class="{sqnInputActive: isEditing, sqnInputReadonly: !isEditing}">
 </input>
 
 <button class="sqn-btn" ng-click="toggleEdit()"><span ng-show="!isEditing">Edit</span><span ng-show="isEditing">Cancel</span></button>
