--- a/browser/js/management/management-guestCategories.html
+++ b/browser/js/management/management-guestCategories.html
@@ -2,12 +2,14 @@
   <header>
     <h3>Modify Guest Categories for all events</h3>
   </header>
-  <form ng-submit="addNewCategory()">
+  <form ng-submit="addNewCategory()" name="guestCategoryForm">
     <label>New Category Name: </label>
     <input class="sqnInput sqnInputActive" type="text" ng-model="guestCategoryName"></input>
-    <input class="sqn-btn" type="submit" value="Add Category"></button>
+    <div class="block-btn-holder">
+      <input class="sqn-btn" type="submit" value="Add Category"></input>
+    </div>
   </form>
-  <div class="guest-category-list">
+  <div class="item-list">
     <modify-guest-category ng-repeat="guestCategory in guestCategories" cat=guestCategory></modify-guest-category>
   </div>
 </section>
@@ -18,9 +20,11 @@
   <form ng-submit="addNewPlatform()">
     <label>New Platform Name: </label>
     <input class="sqnInput sqnInputActive" type="text" ng-model="platformLabel"></input>
-    <input class="sqn-btn" type="submit" value="Add Platform"></button>
+    <div class="block-btn-holder">
+      <input class="sqn-btn" type="submit" value="Add Platform"></input>
+    </div>
   </form>
-  <div class="guest-category-list">
-
+  <div class="item-list">
+    <modify-platforms ng-repeat="platform in allPlatforms" platform="platform"></modify-platforms>
   </div>
 </section>
