--- a/browser/js/new-attendee/new-attendee-email.html
+++ b/browser/js/new-attendee/new-attendee-email.html
@@ -54,7 +54,6 @@
     </div>
     <div ng-show="showEvents" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <h4>What events are you planning to attend?</h4>
-      <p class="sqnInputError" ng-show="eventsError">Hmmm, no point registering if you arent going to attend anything!</p>
       <div class="checkbox col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3"  ng-repeat="evt in events">
         <div class="sqnInput">
           <label>
@@ -63,6 +62,7 @@
       </div>
     </div>
     <div class="col-xxs-12 col-xs-12 col-md-12 col-lg-12">
+      <p class="sqnInputError" ng-show="checkboxError" ng-bind="checkboxErrorMessage"></p>
       <input class="sqn-btn-positive sqn-btn-large" type="submit" value="Register" ng-show="register.$valid" ng-disabled="register.$invalid"></input>
     </div>
   </form>
