--- a/browser/js/new-attendee/new-attendee-external.html
+++ b/browser/js/new-attendee/new-attendee-external.html
@@ -1,1 +1,1 @@
-<new-attendee-external-form events="events" categories="categories" method="method" ></new-attendee-external-form>
+<new-attendee-external-form events="events" categories="categories" method="method" platforms="platforms"></new-attendee-external-form>
