--- a/browser/js/management-events/management-events.html
+++ b/browser/js/management-events/management-events.html
@@ -1,4 +1,9 @@
-<section id="management-events" class="management-sub-menu">
+<section class="management-sub-menu container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <h2> Management Dashboard - Events </h2>
+    </div>
+  </div>
   <div class="flex-container-row">
     <button class="sqn-btn" ng-click="toggleEventCreation()" ng-class="{'sqn-btn-disabled': eventCreationActive}" ng-disabled="eventCreationActive">Create Event</button>
     <button class="sqn-btn">Event Guest List</button>
@@ -6,7 +11,9 @@
   <div class="new-event-creation" ng-show="eventCreationActive">
     <event-creation class=""></event-creation>
   </div>
-  <event-modification class="col-xs-12 col-sm-12 col-md-6 col-lg-6" ng-repeat="evt in allEvents" evt="evt" categories="cats">
-  </event-modification>
+  <div class="row">
+    <event-modification class="col-xs-12 col-sm-12 col-md-6 col-lg-6" ng-repeat="evt in allEvents" evt="evt" categories="cats">
+    </event-modification>
+  </div>
 
 </section>
