--- a/browser/js/management-users/management-users.html
+++ b/browser/js/management-users/management-users.html
@@ -2,7 +2,8 @@
   <header>
     <h2>Management Dashboard - Users</h2>
     <div>
-      <input type="text" ng-model="user"></input>
+      <h4>Filter users</h4>
+      <input type="text" class="sqnInputActive" ng-model="user"></input>
     </div>
   </header>
   <div class="flex-container-row">
