Working through fixing issue with saving and removing users to and from events.

--- a/browser/js/common/directives/user-management-panel/user-management-panel.html
+++ b/browser/js/common/directives/user-management-panel/user-management-panel.html
@@ -12,7 +12,7 @@
     <span ng-bind="user.email"></span>
     <div class="flex-container-row">
       <button class="sqn-btn">Make Admin</button>
-      <button class="sqn-btn-danger">Remove</button>
+      <button class="sqn-btn-danger" ng-click="deleteUser()">Remove</button>
     </div>
   </footer>
 </section>
