Completed ability for user to add or remove personnel from managemenet duties. Also tightened state access based on user authentication.

--- a/browser/js/common/directives/user-management-panel/user-management-panel.html
+++ b/browser/js/common/directives/user-management-panel/user-management-panel.html
@@ -11,7 +11,7 @@
   <footer>
     <span ng-bind="user.email"></span>
     <div class="flex-container-row">
-      <button class="sqn-btn">Make Admin</button>
+      <admin-button user="user"></admin-button>
       <button class="sqn-btn-danger" ng-click="deleteUser()">Remove</button>
     </div>
   </footer>
