--- a/browser/js/management-users/management-users.html
+++ b/browser/js/management-users/management-users.html
@@ -7,6 +7,6 @@
     </div>
   </header>
   <div class="flex-container-row">
-    <user-management-panel ng-repeat="user in users | filter:user" user="user"></user-management-panel>
+    <user-management-panel ng-repeat="user in users | filter:user" user="user" platforms="platforms" evts="events" categories="categories"></user-management-panel>
   </div>
 </section>
