--- a/browser/js/common/directives/user-management-panel/user-management-panel.html
+++ b/browser/js/common/directives/user-management-panel/user-management-panel.html
@@ -1,11 +1,11 @@
 <section>
   <header class="flex-container-row">
-    <h4>{{ user.firstName }} {{ user.lastName }}</h4>
+    <h4 ng-class="{'user-online': user.online }">{{ user.firstName }} {{ user.lastName }}</h4>
     <p ng-bind="association"></p>
   </header>
   <user-platforms class="flex-container-row" userdata="user.platforms" platforms="platforms"></user-platforms>
   <footer>
-    <a href="mailto:{{ user.email }}" ng-bind="user.email" title="Open your email application to send a message to this addres."></a>
+    <a href="mailto:{{ user.email }}" ng-bind="user.email" title="Open your email application to send a message to this address."></a>
     <div class="flex-container-row">
       <admin-button user="user"></admin-button>
       <button class="sqn-btn-danger" ng-click="deleteUser()">Remove</button>
