--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -3,6 +3,7 @@
     <div class="flex-container-row attendee-header">
       <h2>Welcome back {{ user.firstName }}</h2>
       <span>{{ userCat }}</span>
+      <button ui-sref="messaging({id: user.id || user.uid || user.$id })" class="sqn-btn-positive">Chat</button>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       <h3>Manage your events</h3>
