Got querying for overseas users working. Now working querying based on name etc.

--- a/browser/js/common/directives/user-platforms/user-platforms.html
+++ b/browser/js/common/directives/user-platforms/user-platforms.html
@@ -1,1 +1,1 @@
-<span ng-repeat="plat in parsedPlatforms" ng-bind="plat"></span>
+<span ng-repeat="plat in parsedPlatforms track by $index" ng-bind="plat"></span>
