--- a/browser/js/management-users/management-users.html
+++ b/browser/js/management-users/management-users.html
@@ -7,17 +7,11 @@
         <input type="text" class="sqnInputActive" ng-model="user" placeholder="Search by first or last name"></input>
       </div>
       <search-options evts="events" categories="categories" platforms="platforms"></search-options>
-      <!-- <div class="flex-container-row">
-        <button ng-repeat="option in userOptions" ng-disabled="{{option.disabledCriteria}}" ng-class="{{option.classCriteria}}" class="sqn-btn" ng-click="option.clickAction()" ng-bind="option.label"></button>
-      </div>
-      <div class="flex-container-row">
-
-      </div> -->
     </div>
   </header>
   <div class="flex-container-row">
-    <div ng-if="loadingData">
-      <h3>Searching...</h3>
+    <div ng-if="showMessage">
+      <h3 ng-bind="activity"></h3>
     </div>
     <user-management-panel ng-if="!loadingData" ng-repeat="result in searchResults | filter:user" user="result"></user-management-panel>
   </div>
