Working on filter and user results. Making good use of angular.copy.

--- a/browser/js/messaging/messaging-contacts.html
+++ b/browser/js/messaging/messaging-contacts.html
@@ -1,4 +1,5 @@
 <section class="messaging-contacts">
+  <search-options evts="events" categories="categories" platforms="platforms"></search-options>
   <div class="flex-container-row">
     <messaging-contact ng-repeat="user in users" user="user" categories="categories" current="current" platforms="platforms"></messaging-contact>
   </div>
